[package]
name = "cpython-examples"
version = "0.1.0"
authors = ["Nabs <orientnab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "myrustlib"
crate-type = ["cdylib"]

[dependencies]

[dependencies.cpython]
version = "0.5"
features = ["extension-module"]
